--- a/src/client/js/pages/home/home.html
+++ b/src/client/js/pages/home/home.html
@@ -1,15 +1,11 @@
 <!-- BANNER MESSAGE -->
 <rdc-banner-message data="vm.messages.banner"></rdc-banner-message>
 <!-- MAIN BANNER -->
-<div class="container main-banner" ng-class="{'has-banner-message' : vm.messages.banner.summary}">
-    <div class="banner-image">
-        <img class="rainbow" src="/img/rainbow-lg.png">
-    </div>
-    <div class="title">
-        <h1>
-            <span class="emphasis">Rainbow</span>
-            <span class="normal">Day Nursery</span>
-        </h1>
+<div class="main-banner">
+    <div class="container" ng-class="{'has-banner-message' : vm.messages.banner.summary}">
+        <div class="banner-image">
+            <img class="rainbow" src="/img/rainbow-text-lg.png">
+        </div>
     </div>
 </div>
 
