Cleaned up gulp-dist, mobile nav now has overlay, responsive banner img

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -74,6 +74,7 @@
         <script src="/js/core/_core.module.js"></script>
         <script src="/js/core/common.service.js"></script>
         <script src="/js/core/datacontext.js"></script>
+        <script src="/js/core/router.js"></script>
 
         <!--directives-->
         <script src="/js/directives/_directives.module.js"></script>
