--- a/src/client/js/pages/home/home.html
+++ b/src/client/js/pages/home/home.html
@@ -3,8 +3,8 @@
 <!-- MAIN BANNER -->
 <div class="main-banner">
     <div class="container" ng-class="{'has-banner-message' : vm.messages.banner.summary}">
-        <div class="banner-image">
-        </div>
+        <img class="banner-image" src="/img/rainbow-text-lg.png" />
+        <p class="lead">Rainbow Day Nursery is one of the largest licensed daycare centres in Winnipeg with 4 full time locations and 2 before and after school locations</p>
     </div>
 </div>
 
