--- a/src/client/js/pages/site-details/site-details.html
+++ b/src/client/js/pages/site-details/site-details.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-md-5">
                 <div class="section-details">
-                    <h2>Contact</h2>
+                    <h2>Location</h2>
                     <p><a href="tel:{{vm.site.phone}}">{{vm.site.phone}}</a></p>
                     <p>{{vm.site.address.addressLine1}}</p>
                     <p>{{vm.site.address.city}} {{vm.site.address.province}} {{vm.site.address.postalCode}}
