Responsive updates for mobile devices.

--- a/src/client/js/directives/controls/rdc-banner-message.html
+++ b/src/client/js/directives/controls/rdc-banner-message.html
@@ -1,3 +1,6 @@
 <div class="container banner-message" ng-if="data.summary">
-    <a ng-href="{{data.targetUrl}}"><label>Announcements:</label> {{data.summary}}</a>
+    <a ng-href="{{data.targetUrl}}">
+        <label>Announcements:</label>
+        <span>{{data.summary}}</span>
+    </a>
 </div>
