Responsive map via directive

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -72,6 +72,7 @@
 
         <!--core-->
         <script src="/js/core/_core.module.js"></script>
+        <script src="/js/core/app.config.js"></script>
         <script src="/js/core/common.service.js"></script>
         <script src="/js/core/datacontext.js"></script>
         <script src="/js/core/router.js"></script>
@@ -81,6 +82,7 @@
         <script src="/js/directives/behaviors/rdc-collapse.js"></script>
         <script src="/js/directives/controls/rdc-banner-message.js"></script>
         <script src="/js/directives/controls/rdc-hamburger-menu.js"></script>
+        <script src="/js/directives/controls/rdc-map.js"></script>
         <script src="/js/directives/controls/rdc-popover-message.js"></script>
         <script src="/js/directives/dynamic-controls/popover-message.service.js"></script>
 
