Simplified footer, added programs as a new data collection, refactored datacontext into site repo

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -74,7 +74,6 @@
         <script src="/js/core/_core.module.js"></script>
         <script src="/js/core/app.config.js"></script>
         <script src="/js/core/common.service.js"></script>
-        <script src="/js/core/datacontext.js"></script>
         <script src="/js/core/router.js"></script>
 
         <!--directives-->
@@ -88,9 +87,11 @@
 
         <!-- App data -->
         <script src="/js/data/_data.module.js"></script>
-        <script src="/js/data/message.data.js"></script>
-        <script src="/js/data/school.data.js"></script>
-        <script src="/js/data/site.data.js"></script>
+        <script src="/js/data/database/message.data.js"></script>
+        <script src="/js/data/database/program.data.js"></script>
+        <script src="/js/data/database/school.data.js"></script>
+        <script src="/js/data/database/site.data.js"></script>
+        <script src="/js/data/site.repository.js"></script>
 
         <!-- App - Pages -->
         <script src="/js/pages/_pages.module.js"></script>
