--- a/src/client/js/pages/home/home.html
+++ b/src/client/js/pages/home/home.html
@@ -77,42 +77,28 @@
                 <!-- FILTER BOX PANEL  -->
                 <div class="filter-box hidden-xs col-sm-4 col-md-3">
                     <p class="title">Find Options</p>
-                    <hr />
+                    <hr/>
                     <h3>Transportation To Schools</h3>
                     <ul>
                         <li ng-repeat="school in vm.schools" class="checkbox">
                             <label>
-                                <input type="checkbox" ng-click="vm.toggleSchoolFilter(school)">
+                                <input type="checkbox" ng-click="vm.toggleFilter(school)">
                                 <span>{{school.name}}</span>
                             </label>
                             <span class="pull-right subdued" ng-show="school.isChecked || !vm.hasSchoolFilter() ">{{school.siteCount}}</span>
                         </li>
                     </ul>
 
-                    <hr />
+                    <hr/>
 
                     <h3>Programs Offered</h3>
                     <ul>
-                        <li class="checkbox">
+                        <li ng-repeat="program in vm.programs" class="checkbox">
                             <label>
-                                <input type="checkbox">
-                                <span>Infant</span>
+                                <input type="checkbox" ng-click="vm.toggleFilter(program)">
+                                <span>{{program.name}}</span>
                             </label>
-                            <span class="pull-right">??</span>
-                        </li>
-                        <li class="checkbox">
-                            <label>
-                                <input type="checkbox">
-                                <span>Preschool</span>
-                            </label>
-                            <span class="pull-right">??</span>
-                        </li>
-                        <li class="checkbox">
-                            <label>
-                                <input type="checkbox">
-                                <span>School age</span>
-                            </label>
-                            <span class="pull-right">??</span>
+                            <span class="pull-right subdued" ng-show="program.isChecked || !vm.hasProgramFilter() ">{{program.siteCount}}</span>
                         </li>
                     </ul>
                 </div>
@@ -124,7 +110,10 @@
                             <div class="panel panel-default" ng-repeat="site in vm.sites">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
-                                        <a ng-click="site.isChecked = !site.isChecked">{{site.name}}</a>
+                                        <a ng-click="site.isChecked = !site.isChecked">
+                                            {{site.name}}
+                                            <span ng-if="site.messageSummary" class="callout pull-right">{{site.messageSummary}}</span>
+                                        </a>
                                     </h4>
                                 </div>
                                 <div class="panel-collapse collapse in" rdc-collapse="site.isChecked">
@@ -154,6 +143,14 @@
                                                             </li>
                                                         </ul>
                                                     </p>
+                                                    <p class="secondary">
+                                                        Programs
+                                                        <ul>
+                                                            <li ng-repeat="program in site.programs">
+                                                                <span ng-class="{'highlight-text': vm.hasProgramFilter() && vm.isCheckedProgram(program) }">{{program.program.name}}</span>
+                                                            </li>
+                                                        </ul>
+                                                    </p>
                                                     <p class="more-info">
                                                         <a ng-href="#/shell/site/{{site.code}}">More info</a>
                                                     </p>
@@ -178,13 +175,3 @@
     </div>
 </div>
 
-<!--
-<img class="map map-round" src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13&size=350x350&maptype=roadmap
-    &markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
-    &markers=color:red%7Clabel:C%7C40.718217,-73.998284" data-bind="tooltip:{title: 'Click to open in Google Maps', placement: 'center'}">
-
-<iframe width="400"
-          height="300"
-          frameborder="0" style="border:0"
-          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAXuaY3jzo_vEw-DwyBxmOi6orRLl7m2eI&q=Rainbow+Day+Nursery,Winnipeg+Manitoba"></iframe>
--->
