Fixed missing fonts on dist for flexslider, update web.config for woff2, some flex slider responsive fixes.

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -104,7 +104,7 @@
 
         <!-- App - Pages -->
         <script src="/js/pages/_pages.module.js"></script>
-        <script src="/js/pages/layout/shell.controller.js"></script>
+        <script src="/js/pages/shell/shell.controller.js"></script>
         <script src="/js/pages/home/home.controller.js"></script>
         <script src="/js/pages/site-details/site-details.controller.js"></script>
 
