--- a/src/client/js/pages/home/home.html
+++ b/src/client/js/pages/home/home.html
@@ -66,7 +66,7 @@
         <div rdc-flex-slider class="flexslider">
             <ul class="slides" rdc-light-gallery>
                 <li ng-repeat="photo in vm.photos" data-src="{{photo.path}}" 
-                    data-sub-html="<h4><a href='/#/shell/site/P1'>{{photo.title}}</a></h4><p>Blah blah</p>">
+                    data-sub-html="{{photo.titleTemplate}}">
                     <img ng-src="{{photo.path}}" />
                 </li>
             </ul>
