Added site service. Added photos to site details

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -110,7 +110,8 @@
 
         <!-- App - Services -->
         <script src="/js/services/_services.module.js"></script>
-        <script src="/js/services/site-repository.service.js"></script>
+        <script src="/js/services/site.repository.js"></script>
+        <script src="/js/services/site.service.js"></script>
         <script src="/js/services/web-data.service.js"></script>
 
         <!-- Placeholder for injected HTML templates during 'gulp dist' -->
