--- a/src/client/js/pages/home/home.html
+++ b/src/client/js/pages/home/home.html
@@ -82,8 +82,7 @@
                 <h2 class="text-center">
                     Sites
                     <span class="subdued">
-                        (
-                        <span>{{vm.sites.length}}</span>)
+                        <span>({{vm.sites.length}})</span>
                     </span>
                 </h2>
             </div>
