--- a/src/client/js/pages/shell/nav.html
+++ b/src/client/js/pages/shell/nav.html
@@ -11,7 +11,7 @@
                     <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank" class="contact-facebook">
                         <i class="fa fa-facebook"></i>
                     </a>
-                    <a class="contact-email">
+                    <a class="contact-email" href="mailto:inforainbowdn@gmail.com">
                         <i class="fa fa-envelope"></i>
                     </a>
                     <a href="tel:204-256-0672">
