--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -2,9 +2,13 @@
 <html data-ng-app="app">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <title>Rainbow</title>
+    <meta name="description" content="Rainbow Day Nursery is one of the largest licensed daycare centres in Winnipeg with 4 full time locations and 2 before and after school locations">
+    <meta name="viewport" content="width=device-width">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
     <link rel="shortcut icon" href="/img/favicon.ico?v=0.83" />
     <title>Rainbow Day Nursery</title>
     <style>
